2011-03-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.oracle.sql: Added to repository. Creation script with some
	tables of pandora db schema for Oracle DBMS.

2011-03-07 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_modules.php, include/functions_reporting.php,
	include/functions_gis.php, include/functions_servers.php,
	include/ajax/reporting.ajax.php, include/fgraph.php,
	include/functions_db.php, include/functions_alerts.php,
	include/functions_reports.php, extensions/system_info.php,
	extensions/agents_modules.php, operation/agentes/group_view.php,
	operation/events/events_rss.php, operation/reporting/reporting_xml.php,
	operation/reporting/reporting_viewer.php, extras/pandora_diag.php,
	general/logon_ok.php, godmode/db/db_audit.php, godmode/db/db_event.php,
	godmode/db/db_purge.php, godmode/agentes/planned_downtime.php,
	godmode/setup/setup.php,
	godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_delete_modules.php,
	godmode/massive/massive_standby_alerts.php,
	godmode/modules/manage_network_templates.php,
	godmode/modules/manage_network_templates_form.php,
	godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/reporting_builder.preview.php,
	godmode/reporting/reporting_builder.php: changes for to use character " in
	the SQL queries for PostgreSQL, in some cases. In other case there are more
	changes for to create SQL query PostgreSQL.

2011-03-07 Miguel de Dios  <miguel.dedios@artica.es>

	* general/logon_ok.php: change the SQL in postgreSQL and some parts of
	source code to use the colummns with the case sensitive.

2011-03-07 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_events.php, include/functions_reporting.php,
	include/functions_db.php, extensions/users_connected.php,
	general/logon_ok.php: added the SQL queries PostgreSQL
	compatible, in this case with the function to get unix_timestamp.

2011-03-04 Miguel de Dios  <miguel.dedios@artica.es>
